From the trenches

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 <li class="fragment"><b>State of affairs</b></li>
                 <li class="fragment"><b>Be agile adopting agile</b></li>
                 <li class="fragment"><b>Agile development methodologies</b></li>
-                <li class="fragment"><b>Challenges</b></li>
+                <!--<li class="fragment"><b>Challenges</b></li>-->
+                <li class="fragment"><b>From the trenches</b></li>
                 <li class="fragment"><b>Wrapping up</b></li>
                 <li class="fragment"><b>Discussion</b></li>
             </ul>
@@ -581,6 +582,7 @@
 
             </ul>
         </section>
+
         <section data-transition="fade">
             <h2>TDD Practices</h2>
             <br/>
@@ -632,8 +634,175 @@
 
 
         <section class="center">
-            <h2>Challenges</h2> from the trenches
-            culture eats strategy for dinner
+            <!--<h2>Challenges</h2>-->
+            <h2>from the trenches</h2>
+        </section>
+
+
+
+        <section data-transition="fade">
+            <h2>Culture</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Culture eats strategy for lunch, but pain helps</li>
+                <li class="fragment">Is it leadership culture or Command and control culture</li>
+                <li class="fragment">Customer driven organization</li> <!--( we build what customer want not what we want)-->
+                <li class="fragment">The barriers is in our minds, we change only if we try.</li> <!--(baby elephant)-->
+                <li class="fragment">Openness, willingness to listen to new ideas even if it contradicts with your experience and expertise</li>
+                <li class="fragment">Agile sounds weird, really!! well give it a try</li>
+                <li class="fragment">Then Mindset and the people</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h3>People will be in three categories</h3>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Believers, choose your horses</li><br/>
+                <li class="fragment">Non-believers, success by example, bring more to your side</li><br/>
+                <li class="fragment">Not convinced but can give it a try, those are your labor, use them, and help them to believe</li><br/>
+            </ul>
+        </section>
+
+
+
+        <section data-transition="fade">
+            <h2>Self organized team</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">It is a joy, but it is not for free: more liability</li><br/>
+                <li class="fragment">Self discipline</li><br/>
+                <li class="fragment">Eliminating waste</li><br/>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Visibility</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Detect week signals, and act on them , the Frog will be broiled when you heat the water gradually.</li><br/>
+                <li class="fragment">Agile development does not create the problem, it just makes it more visible</li><br/>
+            </ul>
+        </section>
+
+
+
+        <section data-transition="fade">
+            <h2>Ownership</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Obligation and Blame - Finger pointing culture</li><br/>
+                <li class="fragment">Taking ownership</li><br/>
+            </ul>
+        </section>
+
+
+
+        <section data-transition="fade">
+            <h2>Giving-up control</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">I am the technical lead, I always know how to do it better</li><br/>
+                <li class="fragment">I am the manager, I love the command and control style, and I don't know any other way</li><br/>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Trust</h2>
+            <br/>
+            <ul class="orange">
+                <li>If you do not trust your team, agile not for you</li><br/>
+                <li>Are they working enough?!</li><br/>
+            </ul>
+        </section>
+
+
+
+        <section data-transition="fade">
+            <h2>Win-win</h2>
+            <br/>
+            <ul class="orange">
+                <li>Single players verse team players</li><br/>
+                <li>One evaluation, share success and absorb the failure</li><br/>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Team Structure</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Cross functional teams</li>
+                <li class="fragment">Pick your scrum master</li>
+                <li class="fragment">Pick your product owner</li>
+                <li class="fragment">Deal with
+                    <ol>
+                        <li class="fragment"><b>Project mangers</b>: you can be a maker, no longer management overhead</li>
+                        <li class="fragment"><b>Team leads</b>: you can be great scrum master, lead by example, use soft power</li>
+                    </ol>
+                </li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Learning</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Agile development without engineering practices is a dead end</li>
+                <li class="fragment">How to evolve your design, and code</li>
+                <li class="fragment">Refactoring is not a debt, but we need to minimize it's cost</li>
+                <li class="fragment">Develop for customer, build thin vertical slices, not easy to do</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Contracting</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Agile contracts</li>
+                <li class="fragment">Customers are not interested, why?</li>
+                <li class="fragment">Minimal valuable product</li>
+                <li class="fragment">Applying agile development, even if it is a fixed contract</li>
+                <li class="fragment">Engage the customer</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Who moved my cheese</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Can you stretch your comfort zone</li><br/>
+                <li class="fragment">Incremental change, small but sustainable</li><br/>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>self-organizing teams</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Start with one team, you need to plant the first tree, be realistic</li>
+                <li class="fragment">Team competence</li>
+                <li class="fragment">Engineering practices</li>
+                <li class="fragment">Work on conflict while applying the change</li>
+                <li class="fragment">Remove obstacles</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Keep trying</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Invest time and means to achieve your targets</li><br/>
+                <li class="fragment">69% of the fuel is used while Rocket is in take off phase</li><br/>
+            </ul>
         </section>
 
 
