Removed unnecessary slides Commented not ready slides

--- a/index.html
+++ b/index.html
@@ -615,27 +615,40 @@
         </section>
 
 
-        <section data-transition="fade">
-            <h2>Behaviour driven development</h2>
-            <br/>
-            <ul class="orange">
-                <li class="fragment">todo</li>
-            </ul>
-        </section>
+        <!--<section data-transition="fade">-->
+            <!--<h2>Behaviour driven development</h2>-->
+            <!--<br/>-->
+            <!--<ul class="orange">-->
+                <!--<li class="fragment">todo</li>-->
+            <!--</ul>-->
+        <!--</section>-->
 
 
-        <section data-transition="fade">
-            <h2>Continuous integration</h2>
-            <br/>
-            <ul class="orange">
-                <li class="fragment">todo</li>
-            </ul>
-        </section>
+        <!--<section data-transition="fade">-->
+            <!--<h2>Continuous integration</h2>-->
+            <!--<br/>-->
+            <!--<ul class="orange">-->
+                <!--<li class="fragment">todo</li>-->
+            <!--</ul>-->
+        <!--</section>-->
 
 
         <section class="center">
             <!--<h2>Challenges</h2>-->
             <h2>from the trenches</h2>
+        </section>
+
+
+
+        <section data-transition="fade">
+            <h2>Planning</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Identify are your pains</li>
+                <li class="fragment">Understand the main components of your organization</li>
+                <li class="fragment">Identify your goals</li>
+                <li class="fragment">Then put your strategy for the adoption process</li>
+            </ul>
         </section>
 
 
@@ -843,60 +856,6 @@
 
         <section class="center"  data-transition="fade">
             <h2>thank you</h2>
-        </section>
-
-
-
-        <section>
-
-            <section>
-
-            </section>
-
-            <section data-transition="linear" data-background="#8c4738" data-background-transition="slide">
-                <h2>Background Transition Override</h2>
-
-                <p>
-                    You can override background transitions per slide by using
-                    <code>data-background-transition="slide"</code>.
-                </p>
-            </section>
-            <section>
-                <h2>Clever Quotes</h2>
-
-                <p>
-                    These guys come in two forms, inline: <q
-                        cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-                    &ldquo;The nice thing about standards is that there are so many to choose from&rdquo;</q> and block:
-                </p>
-                <blockquote
-                        cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-                    &ldquo;For years there has been a theory that millions of monkeys typing at random on millions of
-                    typewriters would
-                    reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.&rdquo;
-                </blockquote>
-            </section>
-
-            <section>
-                <h2>Pretty Code</h2>
-                        <pre><code data-trim contenteditable>
-                            function linkify( selector ) {
-                            if( supports3DTransforms ) {
-
-                            var nodes = document.querySelectorAll( selector );
-
-                            for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-                            var node = nodes[i];
-
-                            if( !node.className ) {
-                            node.className += ' roll';
-                            }
-                            }
-                            }
-                            }
-                        </code></pre>
-                <p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-            </section>
         </section>
 
     </div>
