--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <h2>Report: features usage</h2>
             <br/>
             <ul class="orange">
-                <li>20% of features are used often and</li><br/>
+                <li>20% of features are used often</li><br/>
                 <li>30% of features and functions get used sometimes or infrequently</li><br/>
                 <li>50% of features are hardly ever or never used.</li>
             </ul>
