--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h4>for sustainable software development</h4><br/>
             <p>
                 <div><small>by Ibrahim El-Etr &amp; Mohamed Ragab</small></div>
-                <div><small>Orange Labs Cairo</small></div>
+                <div><small>Orange Labs Cairo</small></div><br/><br/><br/>
             </p>
         </section>
 
@@ -879,6 +879,9 @@ Scenario: Some determinable business situation
 
         <section class="center">
             <h2>questions</h2>
+            <br/><br/>
+            <div>http://mragab.github.io/amecse</div>
+
         </section>
 
 
